--- a/index.html
+++ b/index.html
@@ -78,11 +78,8 @@
     <!-- section#about>.big_box>h2+p-->
     <section id="about" data-aos="fade" data-aos-duration="3000">
         <div class="big_box">
-            <h2>設計概念</h2>
-            <p>進食是不僅是生活中一個重要的部分，也是人重要的社交行為，人的食材準備與食物消費，在人群社會中扮演著重要的角色。<br>
-                俗話說「民以食為天」便是這個道理的最佳概括。<br>
-                我們透過遊戲互動方式的APP或網頁小遊戲，讓使用者尋找美食的過程輕鬆愉快，同時也體驗到遊戲樂趣，尋找美食又可以有遊戲體驗，使得找美食不無聊、不孤單。</p>
-
+            <h2>FLY FUTURE</h2>
+            <p>進食是不僅是生活中一個重要的部分，也是人重要的社交行為，人的食材準備與食物消費，在人群社會中扮演著重要的角色。</p>
         </div>
     </section>
 
