--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </li>
                     <li>
                         <a href="./contact.html" data-st-target="list" data-st-duration="1000"
-                            data-st-offset="100">WORK</a>
+                            data-st-offset="100">PROCESS</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +62,7 @@
         <div id="link">
             <a href="./recommend.html">ABOUT</a>
             <a href="./game.html">WORK</a>
-            <a href="./contact.html" data-st-target="list" data-st-duration="1000" data-st-offset="100">聯絡方式</a>
+            <a href="./contact.html" data-st-target="list" data-st-duration="1000" data-st-offset="100">PROCESS</a>
         </div>
         <div id="social">
             <a href="https://www.youtube.com/results?search_query=eat+what" target="blank"><img src="./img/youtube.png"
