--- a/index.html
+++ b/index.html
@@ -83,7 +83,45 @@
         </div>
     </section>
 
+     <!-- 區塊內容介紹 -->
+     <section>
+        <div class="boxing">
+            <div class="box_magic">
+                <div class="image_box">
+                    <img src="./img/rice2.jpg" alt="滷肉飯">
+                </div>
+                <div class="text_box">
+                    <h4>海報、菜單、手冊</h4>
+                    <p>整合創意海報、商用菜單、
+                        手冊設計作品。<br>
+                    </p>
+                </div>
+            </div>
+            <div class="box_magic">
+                <div class="image_box">
+                    <img src="./img/rice3.jpg" alt="炒飯">
+                </div>
+                <div class="text_box">
+                    <h4>UI/UX製作、架設網站</h4>
+                    <p>介面設計和改良，架設網站 ，
+                        製作整合，使產品增加曝光率。</p>
+                </div>
+            </div>
 
+            <div class="box_magic">
+                <div class="image_box">
+                    <img src="./img/rice3.jpg" alt="炒飯">
+                </div>
+                <div class="text_box">
+                    <h4>3D建模、AR製作應用</h4>
+                    <p>資訊成長時代，講究商品解說、
+                        導覽，並使消費者有更佳的體驗，
+                        建模和AR為提升消費體驗核心。</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
     <!-- 頁尾 -->
     <footer>
