--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!-- 頁尾 -->
     <footer>
         <div>
-            <a href="" class="logo">{Darkness}</a>
+            <a href=""><img class="logo_pic" src="./img/fly_dream.png" alt="logo_footer"></a>
         </div>
         <small id="copy">
             &copy; Darkness 2021.
