--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
         </div>
     </section>
 
+    <section>
+        <h2 id="list" class="title-big" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">聯絡我</h2>
+        <!-- 表單元素 action="" 傳遞給後端頁面，通常是 XXX.php -->
+        <!-- 要設定 input type="submit" 表單資料才會傳到後端-->
+        <!-- 方法：傳送資料的方式 -->
+        <!-- GET 曝光表單資料 -->
+        <!-- POST 不會曝光表單資料 -->
+        <form action="get.Massage.php" method="POST">
+            <input type="text" name="user-name" placeholder="請輸入您的姓名" required>
+            <input type="email" name="user-email" placeholder="請輸入您的信箱" required>
+            <textarea placeholder="輸入你想對Darkness說的話"></textarea>
+            <input type="submit" value="送出" class="btn">
+        </form></section>
+
     <!-- 頁尾 -->
     <footer>
         <div>
