--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <a href="./index.html"><img class="logo_pic" src="./img/fly_dream.png" alt="logo"></a>
                     </li>
                     <li>
-                        <a href="./recommend.html">ABOUT</a>
+                        <a href="./about.html">ABOUT</a>
                     </li>
                     <li>
-                        <a href="./game.html">WORK</a>
+                        <a href="./work.html">WORK</a>
                     </li>
                 </ul>
             </div>
@@ -56,11 +56,11 @@
             <a href="./index.html"><img class="logo_pic" src="./img/fly_logo_name.png" alt="logo"></a>
         </div>
         <div id="link">
-            <a href="./recommend.html">ABOUT</a>
-            <a href="./game.html">WORK</a>
+            <a href="./about.html">ABOUT</a>
+            <a href="./work.html">WORK</a>
         </div>
         <div id="social">
-            <a href="https://www.youtube.com/results?search_query=eat+what" target="blank"><img src="./img/youtube.png"
+            <a href="https://www.youtube.com/@user-pv3yc1zs1i/playlists" target="blank"><img src="./img/youtube.png"
                     alt="youtube"></a>
             <a href="https://www.instagram.com/besscomha" target="blank"><img src="./img/instagram.png"
                     alt="instagram"></a>
@@ -84,7 +84,7 @@
         <div class="boxing">
             <div class="box_magic">
                 <div class="image_box">
-                    <img src="./img/rice2.jpg" alt="滷肉飯">
+                    <img src="./img/mother_card.jpg" alt="滷肉飯">
                 </div>
                 <div class="text_box">
                     <h4>名片、海報、賀卡</h4>
@@ -95,7 +95,7 @@
             </div>
             <div class="box_magic">
                 <div class="image_box">
-                    <img src="./img/rice3.jpg" alt="炒飯">
+                    <img src="./img/Mockup.jpg" alt="Mockup">
                 </div>
                 <div class="text_box">
                     <h4>UI/UX製作、架設網站</h4>
@@ -106,7 +106,7 @@
 
             <div class="box_magic">
                 <div class="image_box">
-                    <img src="./img/rice3.jpg" alt="炒飯">
+                    <img src="./img/3Dgirl.png" alt="人物模型">
                 </div>
                 <div class="text_box">
                     <h4>3D建模、AR製作應用</h4>
@@ -161,11 +161,11 @@
             <a href=""><img class="logo_pic_footer" src="./img/fly_dream.png" alt="logo_footer"></a>
         </div>
         <small id="copy">
-            &copy; Darkness 2021.
+            &copy; Darkness 2023.
         </small>
         <div id="link">
-            <a href="./rice.html">ABOUT</a>
-            <a href="./recommend.html">WORK</a>
+            <a href="./about.html">ABOUT</a>
+            <a href="./work.html">WORK</a>
         </div>
     </footer>
 
