--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="box_magic">
                 <div class="image_box">
-                    <img src="./img/Mockup.jpg" alt="Mockup">
+                    <img src="./img/web_design.png" alt="Mockup">
                 </div>
                 <div class="text_box">
                     <h4>UI/UX製作、架設網站</h4>
