--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
             <div class="box_magic">
                 <div class="image_box">
-                    <img src="./img/3Dgirl.png" alt="人物模型">
+                    <img src="./img/AR_room.jpg" alt="人物模型">
                 </div>
                 <div class="text_box">
                     <h4>3D建模、AR製作應用</h4>
