--- a/about.html
+++ b/about.html
@@ -71,6 +71,7 @@
     
         <!-- 區塊內容介紹 -->
         <section>
+            <h2 class="title"></h2>
             <div class="boxing">
                 <div class="box_magic">
                     <div class="image_box">
