--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
         </nav>
     
         <!-- 區塊內容介紹 -->
-        <section>
+        <section class="about">
             <h2 class="title">ABOUT</h2>
             <div class="boxing">
                 <div class="box_magic">
@@ -90,7 +90,7 @@
         <!-- 頁尾 -->
         <footer>
             <div>
-                <a href=""><img class="logo_pic_footer" src="./img/fly_dream.png" alt="logo_footer"></a>
+                <a href="./index.html"><img class="logo_pic_footer" src="./img/fly_dream.png" alt="logo_footer"></a>
             </div>
             <small id="copy">
                 &copy; Darkness 2023.
