--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
 
     <!-- 區塊內容介紹 -->
-    <section>
+    <section id="introduce">
         <div class="boxing">
             <div class="box_magic">
                 <div class="image_box">
@@ -158,7 +158,7 @@
     <!-- 頁尾 -->
     <footer>
         <div>
-            <a href=""><img class="logo_pic_footer" src="./img/fly_dream.png" alt="logo_footer"></a>
+            <a href="./index.html"><img class="logo_pic_footer" src="./img/fly_dream.png" alt="logo_footer"></a>
         </div>
         <small id="copy">
             &copy; Darkness 2023.
