--- a/work.html
+++ b/work.html
@@ -76,7 +76,7 @@
         <!-- 頁尾 -->
         <footer>
             <div>
-                <a href=""><img class="logo_pic_footer" src="./img/fly_dream.png" alt="logo_footer"></a>
+                <a href="./index.html"><img class="logo_pic_footer" src="./img/fly_dream.png" alt="logo_footer"></a>
             </div>
             <small id="copy">
                 &copy; Darkness 2023.
