--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
         </nav>
     
         <!-- 區塊內容介紹 -->
-        <section class="about">
+        <section id="aboutmes">
             <h2 class="title">ABOUT</h2>
             <div class="boxing">
                 <div class="box_magic">
