--- a/about.html
+++ b/about.html
@@ -86,6 +86,12 @@
                 </div>    
             </div>
         </section>
+
+        <section id="meinfo">
+            <img src="./img/banner1.jpg" alt="個人形象照">
+            <h2>Hunter</h2>
+            <p>負責介面設計、網站架設、建模和其他AR虛擬情境，一手包辦</p>
+        </section>
             
         <!-- 頁尾 -->
         <footer>
