--- a/work.html
+++ b/work.html
@@ -82,9 +82,9 @@
             </div>
             <div class="text_box">
                 <a href="">
-                    <span>科技體感</span>
+                    <span class="work_title">科技體感</span>
                 </a>
-                <span>UI設計 / 包裝</span>    
+                <span class="work_category">UI設計 / 包裝</span>    
             </div>
         </div>
 
@@ -96,9 +96,9 @@
             </div>
             <div class="text_box">
                 <a href="">
-                    <span>科技體感</span>
+                    <span class="work_title">科技體感</span>
                 </a>
-                <span>UI設計 / 包裝</span>    
+                <span class="work_category">UI設計 / 包裝</span>    
             </div>
         </div>
 
@@ -110,9 +110,9 @@
             </div>
             <div class="text_box">
                 <a href="">
-                    <span>科技體感</span>
+                    <span class="work_title">科技體感</span>
                 </a>
-                <span>UI設計 / 包裝</span>    
+                <span class="work_category">UI設計 / 包裝</span>    
             </div>
         </div>
 
@@ -124,9 +124,9 @@
             </div>
             <div class="text_box">
                 <a href="">
-                    <span>科技體感</span>
+                    <span class="work_title">科技體感</span>
                 </a>
-                <span>UI設計 / 包裝</span>    
+                <span class="work_category">UI設計 / 包裝</span>    
             </div>
         </div>
 
