--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
 
     <section id="contactme">
-        <h2 class="title-big" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">CONTACT</h2>
+        <h2 class="title" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">CONTACT</h2>
         <div class="box_info">
             <div class="contact_box_text">
                 <span class="studio article">
