--- a/work.html
+++ b/work.html
@@ -77,56 +77,56 @@
         <div class="work_box">
             <div class="work_pic">
                 <a href="">
-                    <img src="./img/Mockup.jpg" alt="">
+                    <img src="./img/Mockup.jpg" alt="UI介面">
                 </a>
             </div>
             <div class="text_box">
                 <a href="">
                     <span class="work_title">科技體感</span>
                 </a>
-                <span class="work_category">UI設計 / 包裝</span>    
+                <span class="work_category">UI設計 / UX調整</span>    
             </div>
         </div>
 
         <div class="work_box">
             <div class="work_pic">
                 <a href="">
-                    <img src="./img/Mockup.jpg" alt="">
+                    <img src="./img/web_design.png" alt="網站設計">
                 </a>
             </div>
             <div class="text_box">
                 <a href="">
-                    <span class="work_title">科技體感</span>
+                    <span class="work_title">吃什麼網站</span>
                 </a>
-                <span class="work_category">UI設計 / 包裝</span>    
+                <span class="work_category">網頁設計</span>    
             </div>
         </div>
 
         <div class="work_box">
             <div class="work_pic">
                 <a href="">
-                    <img src="./img/Mockup.jpg" alt="">
+                    <img src="./img/house.png" alt="3D房子">
                 </a>
             </div>
             <div class="text_box">
                 <a href="">
-                    <span class="work_title">科技體感</span>
+                    <span class="work_title">居家小屋</span>
                 </a>
-                <span class="work_category">UI設計 / 包裝</span>    
+                <span class="work_category">3D建模</span>    
             </div>
         </div>
 
         <div class="work_box">
             <div class="work_pic">
                 <a href="">
-                    <img src="./img/Mockup.jpg" alt="">
+                    <img src="./img/AR_room.jpg" alt="模擬房間">
                 </a>
             </div>
             <div class="text_box">
                 <a href="">
-                    <span class="work_title">科技體感</span>
+                    <span class="work_title">模擬床鋪</span>
                 </a>
-                <span class="work_category">UI設計 / 包裝</span>    
+                <span class="work_category">AR製作</span>    
             </div>
         </div>
 
