--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>飛耀未來工作室</title>
+    <title>飛耀未來</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div>
-            <a href="./index.html"><img class="logo_pic" src="./img/fly_logo_name.png" alt="logo"></a>
+            <a href="./index.html"><img class="logo_pic" src="./img/fly_logo.png" alt="logo"></a>
         </div>
         <div id="link">
             <a href="./about.html">ABOUT</a>
