--- a/ui_design.html
+++ b/ui_design.html
@@ -70,15 +70,21 @@
         </div>
     </nav>
 
-    <!-- 關於APP -->
-    <!-- section#about>.big_box>h2+p-->
-    <section id="about" data-aos="fade" data-aos-duration="3000">
-        <div class="big_box">
-            <h2>FLY FUTURE</h2>
-            <p>進食是不僅是生活中一個重要的部分，也是人重要的社交行為，人的食材準備與食物消費，在人群社會中扮演著重要的角色。</p>
+    <!-- UI 作品介紹 -->
+    <section class="show_box">
+        <div class="ui_title">
+            <h2>
+                <span class="ui_en">Technology_UI</span>
+                <br>
+                <span class="ui_tw">科技介面設計</span>
+            </h2>
+        </div>
+        <div class="pic_ui_box">
+            <div class="pic_ui"><img src="./img/UI_one.jpg" alt=""></div>
+            <div class="pic_ui"><img src="./img/UI_two.jpg" alt=""></div>
         </div>
     </section>
-
+    
     <!-- 頁尾 -->
     <footer>
         <div>
