--- a/work.html
+++ b/work.html
@@ -76,12 +76,12 @@
         <div class="work_big_box">
         <div class="work_box">
             <div class="work_pic">
-                <a href="">
+                <a href="./ui_design.html" target="_blank">
                     <img src="./img/Mockup.jpg" alt="UI介面">
                 </a>
             </div>
             <div class="text_box">
-                <a href="">
+                <a href="./ui_design.html" target="_blank">
                     <span class="work_title">科技體感</span>
                 </a>
                 <span class="work_category">UI設計 / UX調整</span>    
